<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

   
	<LinearLayout
		    
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical">
			
			<RelativeLayout
			    android:id="@+id/top_panel"
			    android:animateLayoutChanges="true"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:visibility="gone" >
		
				    <EditText
				        android:id="@+id/et_location"
				        android:layout_width="184dp"
				        android:layout_height="wrap_content"
				        android:layout_alignParentLeft="true"
				        android:layout_toLeftOf="@+id/btn_find"
				        android:ems="10"
				        android:hint="@string/hnt_et_location"
				        android:inputType="text"
				        android:visibility="invisible" />
		
				    <Button
				        android:id="@+id/btn_find"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignBottom="@+id/et_location"
				        android:layout_alignParentRight="true"
				        android:layout_alignParentTop="true"
				        android:gravity="right"
				        android:text="@string/str_btn_find"
				        android:visibility="visible" />
		
			</RelativeLayout>
		
		    <RelativeLayout
		        android:layout_width="fill_parent"
		        android:layout_height="0dp"
		        android:layout_weight="1"
		        android:gravity="top"
		        android:orientation="horizontal" >
		
		        <fragment
		            android:id="@+id/map"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            class="com.google.android.gms.maps.SupportMapFragment" />
		
		        <Button
		            android:id="@+id/btn_start"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerHorizontal="true"
		            android:layout_marginTop="92dp"
		            android:text="@string/str_btn_start"
		            android:width="200dp" />
		
		        <Button
		            android:id="@+id/btn_ready"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignBaseline="@+id/btn_start"
		            android:layout_alignBottom="@+id/btn_start"
		            android:layout_alignLeft="@+id/btn_start"
		            android:layout_alignRight="@+id/btn_start"
		            android:text="@string/str_btn_ready"
		            android:visibility="invisible" />
		
		        <ProgressBar
		            android:id="@+id/spinner"
		            style="?android:attr/progressBarStyleLarge"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@+id/btn_start"
		            android:layout_centerHorizontal="true"
		            android:layout_marginTop="16dp"
		            android:visibility="gone" />
		
		    </RelativeLayout>
		
		    <RelativeLayout
		        android:id="@+id/stats_pnl"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.04"
		        android:animateLayoutChanges="true"
		        android:background="@color/statPanelBG"
		        android:visibility="gone" >
		
		        <EditText
		            android:id="@+id/stopper_float"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="#00000000"
		            android:clickable="false"
		            android:ems="10"
		            android:gravity="center_vertical"
		            android:inputType="text"
		            android:longClickable="false"
		            android:textColor="@color/StopperColor" />
		
		        <EditText
		            android:id="@+id/mph"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignBottom="@+id/stopper_float"
		            android:layout_alignParentRight="true"
		            android:layout_alignParentTop="true"
		            android:background="#00000000"
		            android:clickable="false"
		            android:ems="10"
		            android:gravity="right"
		            android:inputType="text"
		            android:longClickable="false"
		            android:textColor="@color/StopperColor" >
		
		            <requestFocus />
		        </EditText>
	
		        <Button
		            android:id="@+id/btn_stop"
		            style="?android:attr/buttonStyleSmall"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentTop="true"
		            android:layout_centerHorizontal="true"
		            android:minHeight="12dip"
		            android:text="@string/str_btn_stop"
		            android:gravity="center" />
		
		    </RelativeLayout>
		
		</LinearLayout>
</FrameLayout>
	 <ListView android:id="@+id/left_drawer"
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:background="@color/drawerBG"
        android:listSelector="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"/>
</android.support.v4.widget.DrawerLayout>